--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@
 
 .carousel {
     position: relative;
+    max-height: 100vh;
+    overflow: hidden;
 }
 
 .carousel-overlay-container {
@@ -30,6 +32,7 @@
     z-index: 10;
     width: 100%;
     height: 100%;
+
     background-color: rgba(0, 0, 0, .6);
 }
 
@@ -83,7 +86,11 @@ footer a:hover {
 }
 
 @media screen and (max-width: 768px){
-    .navbar-brand * {
+    .carousel-overlay-container * {
         font-size: 1rem;
+    }
+
+    .carousel-overlay {
+        width: 100%;
     }
 }
