--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@
     font-size: 1.5rem;
 }
 
-.btn-formOrador {
+.btn-submit {
     color: white;
     background-color: #96C93E;
 }
@@ -103,4 +103,43 @@ footer a:hover {
     .carousel-overlay {
         width: 80%;
     }
+}
+
+/* Estilos buy_tickets.html */
+.categorias {
+    display: flex;
+    justify-content: space-between;
+}
+
+.categoria {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 0 20px;
+    transition: color .3s, box-shadow .3s;
+}
+
+.categoria-aclaracion {
+    font-size: 14px;
+}
+
+.categoria:hover {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+#categoria1:hover {
+    color: #0D6EFD;
+}
+
+#categoria2:hover {
+    color: #198754;
+}
+
+#categoria3:hover {
+    color: #FFC107;
+}
+
+.contenedor {
+    max-width: 640px;
 }
